updated package hierarchy and modified mvn test plugin version